-------------------------------------------------------------------
Date: 15 Sep 2004    Version: pw-2-1
-------------------------------------------------------------------

15 Sep 2004 All examples updated (CC)
            added mpf90, mpcc for Mac, support for ifort 8.1,
            ARCH variable to configure [Gerardo]
            Setup: inequivalent k-points not generated in berry or
            band-structure calculations.(C.S.)
            Path optimizations: added the possibility to write the 
            prefix.save file (logical varible write_save) relative
            to each image (needed for post-processing). (C.S.)
            Berry phase in parallel is implemented only along z.

14 Sep 2004 Allocation of evc when starting from atomic wavefunctions 
            modified so that evc contain only the real number bands and 
            not all the atomic wfcs (they can be much more than the
            number of bands). 
            unified setup.f90 for both collinear and noncollinear case.
            (CS)
            Pseudo-random wave functions initialization,
            independent from number of procs and architecture (CC) 
            Fixes for intel compiler 7.1:
            - pstickset arguments;
            - dummy argument to an external subroutine with implicit 
              dimensions ( i.e. a(:,:) ..... CALL sub( a, ... )
              replaced with a(:,:) ..... CALL sub( a(1,1), .... ) ) (CC)
            Raman with finite differences disabled (doesn't work any longer)
            Misc minor fixes (PG)

13 Sep 2004 Merge of cell dynamics (CC): 
            - same cell dynamics subroutines used in CP and FPMD
            - input pressure in GPa ( both code )
            - Output stress in GPa ( both code )
            - Output layout made more similar:
              energies, positions, forces, cell displayed in the same way
            - Zero velocities after a restart implemented in CP